<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/padding_20dp">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Filter"
            android:textColor="@color/black"
            android:textSize="@dimen/normal_text_size"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.121"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.04" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.129"
            tools:layout_editor_absoluteX="0dp">

            <TextView
                android:id="@+id/cityTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/city" />

            <Spinner
                android:id="@+id/citiesSpinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:spinnerMode="dropdown" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout"
            app:layout_constraintVertical_bias="0.102">

            <TextView
                android:id="@+id/priceTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/price" />

            <SeekBar
                android:id="@+id/priceseekBar"
                android:layout_width="259dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/margin_10dp"
                android:layout_marginRight="@dimen/margin_10dp"
                android:min="0"
                android:max="20000"/>

            <TextView
                android:id="@+id/seekBarValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_0_00jod"
                android:textColor="@color/black" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
            app:layout_constraintVertical_bias="0.112">

            <TextView
                android:id="@+id/CapacityTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/capacity" />

            <EditText
                android:id="@+id/capacityTextNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout3"
            app:layout_constraintVertical_bias="0.108">

            <Switch
                android:id="@+id/childrenAllowedSwitch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/childern_allowed" />
        </LinearLayout>

        <Button
            android:layout_width="170dp"
            android:layout_height="48dp"
            android:onClick="applyButtonOnClick"
            android:text="Apply"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout4" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>

